--- a/res/anim/cpu_play.xml
+++ b/res/anim/cpu_play.xml
@@ -3,6 +3,7 @@
     android:interpolator="@android:anim/linear_interpolator" >
 
     <scale
+        android:duration="1500"
         android:fromXScale="1.0"
         android:fromYScale="1.0"
         android:pivotX="50%"
