--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -34,5 +34,18 @@
         <item>2</item>
         
     </string-array>
+    
+    <string-array name="set_types">
+        
+        <item>@string/points</item>
+        <item>@string/wins</item>
+        
+    </string-array>
+    
+    <string-array name="players_num">
+        <item>1 v 1</item>
+        <item>1 v 1 v 1</item>
+        <item>2 v 2</item>
+    </string-array>
 
 </resources>
