--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,13 +4,19 @@
     <style name="menu_button" parent="@android:style/Widget.Button">
         <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
         <item name="android:background">@drawable/btn_menu</item>
-        <item name="android:layout_marginBottom">0.0dp</item>
+        <item name="android:layout_marginBottom">@dimen/menu_btn_margin_bottom</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_centerHorizontal">true</item>
-        <item name="android:layout_width">192dp</item>
-        <item name="android:minWidth">192dp</item>
-        <item name="android:maxWidth">192dp</item>
+        <item name="android:layout_width">190dp</item>
+        <item name="android:minWidth">190dp</item>
+        <item name="android:maxWidth">190dp</item>
     </style>
+    
+    <style name="menu_side_icon" parent="@android:style/Widget.ImageButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/sel_bkgr_touched</item>
+	</style>
     
     <style name="how_button" parent="@android:style/Widget.Button">
         <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
