--- a/res/layout/ad_in_dialog.xml
+++ b/res/layout/ad_in_dialog.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="wrap_content"    
     android:layout_marginBottom="@dimen/ad_top_bottom_margin"
     android:layout_marginTop="@dimen/ad_top_bottom_margin" >
 
-    <com.google.ads.AdView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        ads:adSize="SMART_BANNER"
-        ads:testDevices="TEST_EMULATOR"
-        ads:adUnitId="a15007e97f87daa"
-        ads:loadAdOnCreate="true" >
-    </com.google.ads.AdView>
+    <com.adsdk.sdk.banner.AdView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		animation="true"
+		location="false"
+		publisherId="819563d36a65ebca90245302554ddb33"
+		request_url="http://my.mobfox.com/request.php"
+		android:background="#00000000" />
+
 </HorizontalScrollView>
