--- a/res/layout/continue_set.xml
+++ b/res/layout/continue_set.xml
@@ -132,6 +132,10 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
     </RelativeLayout>
 
+    <RelativeLayout 
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+        
     <Button
         android:id="@+id/set_btn_continue"
         android:layout_width="wrap_content"
@@ -140,10 +144,29 @@
         android:layout_marginTop="@dimen/ad_top_bottom_margin"
         android:text="@string/set_btn_continue_next"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+    	    
+	    <ImageButton
+	        android:id="@+id/set_ibt_save"
+	        android:background="@drawable/sel_bkgr_touched"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentRight="true"
+	        android:layout_centerVertical="true"
+	        android:src="@drawable/ic_save" 
+	        android:contentDescription="@string/blank" />
+	
+	</RelativeLayout>
 
-    <include
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        layout="@layout/ad_in_dialog" />
+    <com.adsdk.sdk.banner.AdView
+        android:id="@+id/adView"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:layout_marginTop="3dp"
+		animation="true"
+		location="false"
+		publisherId="819563d36a65ebca90245302554ddb33"
+		request_url="http://my.mobfox.com/request.php"
+		android:background="#00000000" />
 
 </LinearLayout>
