--- a/res/layout/new_set.xml
+++ b/res/layout/new_set.xml
@@ -126,15 +126,39 @@
             android:entries="@array/difficult_modes" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/set_btn_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/ad_top_bottom_margin"
-        android:text="@string/set_btn_start"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+    <RelativeLayout 
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+        
+	    <Button
+	        android:id="@+id/set_btn_start"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_centerInParent="true"
+	        android:layout_marginTop="@dimen/ad_top_bottom_margin"
+	        android:text="@string/set_btn_start"
+	        android:textAppearance="?android:attr/textAppearanceLarge" />
+	    
+	    <ImageButton
+	        android:id="@+id/set_ibt_load"
+	        android:background="@drawable/sel_bkgr_touched"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentRight="true"
+	        android:layout_centerVertical="true"
+	        android:src="@drawable/ic_load" 
+	        android:contentDescription="@string/blank" />
+	
+	</RelativeLayout>
 
-    <include layout="@layout/ad_in_dialog" />
-
+    <com.adsdk.sdk.banner.AdView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:layout_marginTop="3dp"
+		animation="true"
+		location="false"
+		publisherId="819563d36a65ebca90245302554ddb33"
+		request_url="http://my.mobfox.com/request.php"
+		android:background="#00000000" />
 </LinearLayout>
