--- a/res/layout/continue_set.xml
+++ b/res/layout/continue_set.xml
@@ -136,15 +136,22 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
         
-    <Button
-        android:id="@+id/set_btn_continue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/ad_top_bottom_margin"
-        android:text="@string/set_btn_continue_next"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-    	    
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" >
+
+            <Button
+                android:id="@+id/set_btn_continue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="@dimen/ad_top_bottom_margin"
+                android:text="@string/set_btn_continue_next"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        </FrameLayout>
+
 	    <ImageButton
 	        android:id="@+id/set_ibt_save"
 	        android:background="@drawable/sel_bkgr_touched"
