--- a/res/layout/ad_in_dialog.xml
+++ b/res/layout/ad_in_dialog.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"    
+    android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/ad_top_bottom_margin"
-    android:layout_marginTop="@dimen/ad_top_bottom_margin" >
+    android:layout_marginTop="@dimen/ad_top_bottom_margin"
+    android:measureAllChildren="false"  >
 
-    <com.adsdk.sdk.banner.AdView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="center"
-		animation="true"
-		location="false"
-		publisherId="819563d36a65ebca90245302554ddb33"
-		request_url="http://my.mobfox.com/request.php"
-		android:background="#00000000" />
+    <devN.etc.LeadBoltAdView
+		android:layout_width="320px"
+		android:layout_height="50dp"
+		android:contentDescription="Dialog ad"
+		android:background="#ffffffff"
+		android:visibility="gone" 
+		android:tag="fixed" />
 
 </HorizontalScrollView>
