--- a/res/layout/dlg_ace.xml
+++ b/res/layout/dlg_ace.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/tsoha" xmlns:app1="http://schemas.android.com/apk/res/devN.games.agonia">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
-
-        <include layout="@layout/ad_in_dialog" />
 
         <android.support.v7.widget.GridLayout
             android:layout_width="wrap_content"
