--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -10,6 +10,11 @@
    	<style name="devn_button" parent="@android:style/Widget.Button">
 	    <item name="android:background">@drawable/sel_bkgr_btn</item>
 	</style>
+    
+    <!-- 2.1 -->
+   	<style name="devn_dialog" parent="@android:style/Theme.Dialog">
+
+	</style>
 	
    	<!-- 2.1 -->
     <style name="devn_theme" parent="android:Theme.Black.NoTitleBar.Fullscreen">
@@ -18,11 +23,6 @@
         <item name="android:alertDialogStyle">@style/devn_dialog</item>
         <item name="android:spinnerStyle">@style/devn_spinner</item>
     </style>
-    
-    <!-- 2.1 -->
-   	<style name="devn_dialog">
-
-	</style>
 
     <style name="menu_button" parent="@android:style/Widget.Button">
         <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
