Fixed: banner ad in dialog is aligned under buttons aceOnAce and aceLast is now false by default (as in pref.xml)
Removed:
LeadBolt SDK

--- a/res/layout/ad_in_dialog2.xml
+++ b/res/layout/ad_in_dialog2.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         ads:adSize="SMART_BANNER"
-        ads:testDevices="TEST_EMULATOR, 3D600443E10074BF066B583607BB1B80"
+        ads:testDevices="TEST_EMULATOR, 3D600443E10074BF066B583607BB1B80, 2916D128B56D865EEFC199FD7084CBE6"
         ads:adUnitId="a151a12b484819b"
         ads:loadAdOnCreate="true" />
 </FrameLayout>
